--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/db_suit_v2?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Vu12345678
+spring.datasource.password=12345678
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
